--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IT=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timothy Cornwell Personal Portfolio Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
+<body id="header">
+    <div class="container">
+        <nav>
+            <ul>
+                <!-- <img src="" class="logo>"-->
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
 
 </body>
 
