Updates to Portfolios: Header Content, About Tab

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+<!--Header Section-->
 <body id="header">
     <div class="container">
         <nav>
@@ -20,6 +21,54 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
+        <div class="header-text">
+            <p>UI/UX designer</p>
+            <h1>Hi, I'm <span>Timothy Cornwell</span><br> aspiring Web Developer</h1>
+        </div>
+    </div>
+
+
+    <!--About Section-->
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="about-col-1">
+                    <!-- <img src="">-->
+                </div>
+                <div class="about-col-2">
+                    <h1 class="subtitle">About Me</h1>
+                    <p>My name is Timothy Cornwell, since I first considered going into the tech industry, I have always wanted to go into Web Developemnt or Cyber Security.
+                        As this portfolio might suggest, I have chosen to pursue Web Developemnt, I have always been interested in how website operate and function ever since I 
+                        discovered the "inspect element" feature on Google Chrome. Since then, I have taken steps to prepare myself to enter the field by going to study Computer Science
+                        as my Bachelor's degree at the University of Houston-Victoria. I will have completed this objective in May 2024 by earning my degree. During my time as a student I have
+                        had the opportunity to learn the necessary elements to Software Developement and coding. I first learned C++ as the introductory language, which pushed me to learning C# and Java next.
+                        I wanted to explore other operating systems and coding languages, so I completed a Introduction to Linux course which introduced me to Bash and most importantly Python. 
+                        Using Python, I have been able to practice and develope skills such as the core search and sorting algorithms. In my own time, I have practiced HTML and CSS in order to begin the journey
+                        to becoming a Web Developer, and I have recently been introduced to JavaScript and have begun to explore the uses of it. To broaden my experience, I volunteered to join a team
+                        to develope a web application using Blazer, Postgres, and Azure Data Studio that allows a user to view stream data pulled from sources such as the organization's website, facebook, and other sources.
+                        This project is still ongoing, however, I have learned alot about the uses of Blazer and the utility of C#, SQL, and scripting. I aim to become a FullStack developer, and I am eager and excited for the journey
+                        to completing this goal.
+                    </p>
+                    <div class="tab-titles">
+                        <p class="tab-links active-link" >Skills</p>
+                        <p class="tab-links">Experience</p>
+                        <p class="tab-links">Education</p>
+                    </div>
+                    <div class="tab-contents">
+                        <ul>
+                            <li><span>UI/UX</span><br>Designing Web/App interfaces</li>
+                            <li><span>Software Developement</span><br>Designing and Developing Software Applications</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents">
+                        <ul>
+                            <li><span>University of Houston-Victoria</span><br>Web/App interfaces</li>
+                            <li><span>Software Developement</span><br>Designing and Developing Software Applications</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
