Update to main title

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
         <div class="header-text">
             <p>UI/UX designer</p>
-            <h1>Hi, I'm <span>Timothy Cornwell</span><br> aspiring Web Developer</h1>
+            <h1>Hi, I'm <span>Timothy Cornwell</span><br> an aspiring Web Developer</h1>
         </div>
     </div>
 
